fixing the overflow

--- a/app.css
+++ b/app.css
@@ -2,10 +2,12 @@
 html,
 body {
   font-family: 'Lato', sans-serif;
-  background: -webkit-linear-gradient(#ffffff 60%, #e5daf0);
-  background: -moz-linear-gradient(#ffffff 60%, #e5daf0);
-  background: -o-linear-gradient(#ffffff 60%, #e5daf0);
-  background: linear-gradient(#ffffff 60%, #e5daf0);
+  background: -webkit-linear-gradient(#ffffff 55%, #e5daf0);
+  background: -moz-linear-gradient(#ffffff 55%, #e5daf0);
+  background: -o-linear-gradient(#ffffff 55%, #e5daf0);
+  background: linear-gradient(#ffffff 55%, #e5daf0);
+  background-attachment: fixed;
+  overflow: hidden;
 }
 
 /*.header {
@@ -45,10 +47,11 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 50px;
+  height: 100px;
   text-align: center;
   padding-top: 25px;
   z-index: 99;
+  background:rgba(255,255,255,0.75);
 }
 
 #navigation li {
@@ -116,6 +119,7 @@ body {
 /*About*/
 
 .about {
+  margin-top: 120px;
   width:500px;
   margin-left: auto;
   margin-right: auto;
@@ -126,5 +130,4 @@ body {
   text-align: left;
   font-size: 14px;
   font-weight: 300;
-  margin-top: 12%;
 }
